--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start:dev": "sirv public --dev"
   },
   "dependencies": {
-    "pdfjs-dist": "^2.0.943",
+    "@bundled-es-modules/pdfjs-dist": "^2.1.266-rc",
     "tesseract.js": "^2.0.0-alpha.4"
   }
 }
