--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@bundled-es-modules/pdfjs-dist": "^2.1.266-rc",
+    "docx": "^4.7.1",
+    "file-saver": "^2.0.2",
     "tesseract.js": "^2.0.0-alpha.4"
   }
 }
