--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@bundled-es-modules/pdfjs-dist": "^2.1.266-rc",
-    "docx": "^4.7.1",
+    "docx": "git://github.com/dolanmiu/docx#5.0.0-rc3",
     "file-saver": "^2.0.2",
     "tesseract.js": "^2.0.0-alpha.4"
   }
