--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.10.1",
     "rollup-plugin-commonjs": "^9.3.4",
@@ -17,7 +19,8 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
-    "start:dev": "sirv public --dev"
+    "start:dev": "sirv public --dev",
+    "test": "mocha"
   },
   "dependencies": {
     "@bundled-es-modules/pdfjs-dist": "^2.1.266-rc",
