--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "mocha": "^6.1.4",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.10.1",
+    "rollup-plugin-analyzer": "^3.1.2",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^4.2.3",
